[tool.poetry]
name = "hint-search-bot"
version = "0.1.0"
description = ""
authors = ["Anton Fomin <anton.fomin@muehlemann-popp.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.36.0"
openai = "^1.35.13"
presidio-analyzer = {extras = ["transformers"], version = "^2.2.354"}
presidio-anonymizer = "^2.2.354"
numpy = "1.26.4"
pandas = "^2.2.2"
transformers = "^4.42.4"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
